# VOTV_MP

./: .gitignore  .gitmodules  BUILDING.md  CLAUDE.md  README.md  mp_client_connect.bat  mp_host_game.bat  mp_smoke.bat  probe-flashlight.bat  stop-flashlight-probe.bat
src/votv-coop/: CMakeLists.txt  README.md
src/votv-coop/assets/fonts/: LICENSE-FixedsysExcelsior.txt
src/votv-coop/include/coop/: active_drive.h  chat_feed.h  clump_throw_sound.h  event_feed.h  flashlight_click_sound.h  garbage_sync.h  item_activate.h  kerfur_convert.h  kerfur_entity.h  kerfur_reconcile.h  keypad_sync.h  moderation.h  multiplayer_menu.h  npc_adoption.h  npc_mirror.h  npc_sync.h  pile_morph.h  pile_reconcile.h  player_handshake.h  player_inventory_sync.h  players_registry.h  prop_echo_suppress.h  prop_element_tracker.h  prop_lifecycle.h  prop_snapshot.h  prop_synth_key.h  puppet_carry_drive.h  remote_player.h  remote_prop.h  remote_prop_spawn.h  roster.h  save_block.h  save_identity_bind.h  save_identity_map.h  save_time_retire_util.h  save_transfer.h  snapshot_census.h  trash_channel.h  trash_clump_pose_stream.h  trash_collect_sync.h  (+3 more)
src/votv-coop/include/coop/comms/: peer_action_feed.h
src/votv-coop/include/coop/creatures/: kerfur_convert.h  kerfur_convert_client.h  kerfur_convert_host.h  kerfur_entity.h  kerfur_form_assembler.h  kerfur_prop_adoption.h  kerfur_reconcile.h  npc_adoption.h  piramid_sync.h  wisp_attack_sync.h  wisp_grab_hold.h  wisp_tear_mirror.h  world_actor_sync.h
src/votv-coop/include/coop/dev/: add_points.h  door_probe.h  drone_probe.h  flashlight_setup.h  force_weather.h  inventory_probe.h  join_window_pos_trace.h  kerfur_census.h  kerfur_toggle.h  keypad_probe.h  lightswitch_probe.h  menu_proceed.h  native_pile_inert_probe.h  object_overlay.h  perf_probe.h  puppet_head_probe.h  rng_roll_census.h  spawn_menu_unlock.h  spawn_order_probe.h  teleport_client.h  weather_probe.h
src/votv-coop/include/coop/devices/: atv_sync.h  comp_sync.h  console_state_sync.h  device_occupancy.h  drone_sync.h  grime_sync.h  interactable_sync.h  keypad_sync.h  order_sync.h  power_sync.h  signal_catch_sync.h  signal_sync.h  signal_wire.h  sleep_sync.h  turbine_sync.h  window_sync.h
src/votv-coop/include/coop/dispatch/: event_feed.h
src/votv-coop/include/coop/element/: element.h  element_deleter.h  identity.h  identity_create.h  identity_destroy.h  identity_reconcile.h  lerp_window.h  mirror_manager.h  mirror_managers.h  npc.h  player.h  quiescence_drain.h  registry.h  world_actor.h
src/votv-coop/include/coop/interactables/: atv_sync.h  (+17 more)
src/votv-coop/include/dev/: common.h  flashlight_setup.h  pos_hud.h  restore_vitals.h  teleport_client.h
src/votv-coop/include/harness/: autotest.h  autotest_dispatch.h  session_runtime.h
src/votv-coop/include/ue_wrap/: appliance.h  asset_load.h  atv.h  base_window.h  begin_equipment.h  call.h  console_desk.h  daynightcycle.h  door.h  drone.h  economy.h  engine.h  fname_utils.h  game_thread.h  garage.h  grime.h  gvas_meta.h  hot_path_guard.h  hud_feed.h  incremental_object_scan.h  kerfur.h  lightswitch.h  passwordlock.h  power_control.h  prop.h  puppet.h  reflected_offset.h  reflection.h  save_browser.h  save_capture.h  sdk_profile.h  sdk_profile_names.h  settled_object_scan.h  skysphere.h  spawn_menu.h  swinger.h  trace.h  types.h  ufunction_hook.h  vitals.h  (+3 more)
src/votv-coop/include/ui/: admin_panel.h  dev_menu.h  fonts.h  imgui_overlay.h  join_curtain.h  multiplayer_menu.h  scale.h  scoreboard.h  server_browser.h
src/votv-coop/resources/: font_resource_ids.h  fonts.rc
src/votv-coop/src/bootstrap/: dllmain.cpp
src/votv-coop/src/coop/: atv_sync.cpp  balance_sync.cpp  chat_feed.cpp  clump_throw_sound.cpp  email_sync.cpp  event_cue_sync.cpp  event_dispatch.h  event_dispatch_entity.cpp  event_dispatch_state.cpp  event_dispatch_world.cpp  event_feed.cpp  flashlight_click_sound.cpp  garbage_sync.cpp  grab_observer.cpp  grime_sync.cpp  host_spawn_watcher.cpp  interactable_sync.cpp  item_activate.cpp  kerfur_convert.cpp  kerfur_entity.cpp  kerfur_prop_adoption.cpp  kerfur_reconcile.cpp  keypad_sync.cpp  local_streams.cpp  mirror_defer.cpp  multiplayer_menu.cpp  nameplate.cpp  net_pump.cpp  npc_adoption.cpp  npc_mirror.cpp  npc_pose_host.cpp  npc_sync.cpp  npc_world_enum.cpp  pile_morph.cpp  pile_reconcile.cpp  player_handshake.cpp  player_inventory_sync.cpp  players_registry.cpp  power_sync.cpp  prop_echo_suppress.cpp  (+28 more)
src/votv-coop/src/dev/: common.cpp  flashlight_setup.cpp  freecam.cpp  pos_hud.cpp  restore_vitals.cpp  teleport_client.cpp
src/votv-coop/src/harness/: autotest.cpp  autotest_alarmforce.cpp  autotest_chippile.cpp  autotest_cueforce.cpp  autotest_dispatch.cpp  autotest_eventfire.cpp  autotest_fog_probe.cpp  autotest_kwisp_probe.cpp  autotest_pauseguard.cpp  autotest_piramidforce.cpp  autotest_ragdoll_spawn_probe.cpp  autotest_vitals.cpp  config.cpp  harness.cpp  sdk_check.cpp  session_runtime.cpp
src/votv-coop/src/loader/: xinput_proxy.cpp
src/votv-coop/src/ue_wrap/: asset_load.cpp  begin_equipment.cpp  call.cpp  console_desk.cpp  device_screen.cpp  door.cpp  economy.cpp  engine.cpp  engine_attach.cpp  engine_bones.cpp  engine_component.cpp  engine_mainplayer.cpp  engine_playerragdoll.cpp  engine_save.cpp  engine_widget.cpp  fname_utils.cpp  game_rules.cpp  game_thread.cpp  game_thread_detail.h  gvas_meta.cpp  hud_feed.cpp  kerfur.cpp  lightswitch.cpp  log.cpp  passwordlock.cpp  pe_detour.cpp  prop.cpp  puppet.cpp  reflected_offset.cpp  reflection.cpp  save_browser.cpp  save_capture.cpp  spawn_menu.cpp  swinger.cpp  trace.cpp  ufunction_hook.cpp  vitals.cpp  vm_dispatch.cpp  wisp.cpp
src/votv-coop/src/ui/: admin_panel.cpp  chat_input.cpp  console.cpp  dev_menu.cpp  fonts.cpp  host_save_picker.cpp  hud.cpp  imgui_overlay.cpp  join_curtain.cpp  loading_screen.cpp  multiplayer_menu.cpp  scale.cpp  scoreboard.cpp  server_browser.cpp  skins_panel.cpp  toast.cpp  voice_panel.cpp
tools/coop-server-rs/: .gitignore  Cargo.toml  README.md
tools/coop-server-rs/.cargo/: config.toml
tools/coop-server-rs/src/: common.rs  lib.rs
(+722 files in other folders)
